--- a/consumer-java/pom.xml
+++ b/consumer-java/pom.xml
@@ -6,11 +6,11 @@
 
     <groupId>com.flipkart</groupId>
     <artifactId>pulsar-weighted-consumer</artifactId>
-    <version>2.7-1</version>
+    <version>2.10-0</version>
 
     <properties>
         <java.version>8</java.version>
-        <pulsar.version>2.7.4</pulsar.version>
+        <pulsar.version>2.10.0</pulsar.version>
     </properties>
 
     <licenses>
@@ -59,6 +59,36 @@
             <groupId>org.apache.pulsar</groupId>
             <artifactId>pulsar-client</artifactId>
             <version>${pulsar.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.11.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java-util</artifactId>
+            <version>3.11.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pulsar</groupId>
+            <artifactId>protobuf-shaded</artifactId>
+            <version>2.1.0-incubating</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.errorprone</groupId>
+            <artifactId>error_prone_annotations</artifactId>
+            <version>2.3.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>listenablefuture</artifactId>
+            <version>9999.0-empty-to-avoid-conflict-with-guava</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
