--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <java.version>8</java.version>
-        <pulsar.version>2.7.4</pulsar.version>
+        <pulsar.version>2.10.0</pulsar.version>
     </properties>
 
     <build>
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>com.flipkart</groupId>
             <artifactId>pulsar-weighted-consumer</artifactId>
-            <version>2.7-SNAPSHOT</version>
+            <version>2.10-1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
